# Max-Assistant

./: .gitignore  ARCHITECTURE.md  JARVIS_MASTER_PLAN.md  PyWhatKit_DB.txt  README.md  UPGRADE_LOG.md  background.js  content.js  continuous_listening_logic.md  env.example  error_log.txt  manifest.json  max_architecture_and_issues.md  more information.txt  package.json  quantumcomputingtxt.txt  raw_code.txt  requirements.txt  setup_startup.py  start.bat  start.sh
Jarvis Generated/Research/: research_curious_voices_of_females.txt
backend/: FEATURE_ROADMAP.md  PyWhatKit_DB.txt  README.md  agent_core.py  api_utils.py  config.py  main.py  main_pipeline_changes.py  main_startup_patch.py  requirements.txt  scratch_test_ack.py  scratch_test_ghost.py  scratch_test_ws.py  search_fix.py  skill_forge_log.jsonl  test_chat.json  test_llm.py
backend/data/: notes.txt  permanent_rules.json
backend/knowledge/: frontend-design.md  sanket.md
backend/modules/: Intent_engine.py  __init__.py  action_scheduler.py  agent_core.py  agent_loop.py  app_indexer.py  browser_agent.py  calendar_agent.py  code_engine.py  (+23 more)
frontend/: index.html  package-lock.json  package.json
max-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
max-desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
max-desktop/src-tauri/.cargo/: config.toml
max-desktop/src-tauri/capabilities/: default.json
max-desktop/src-tauri/src/: lib.rs  main.rs
plugins/: ask_ai.py  read_clipboard.py  youtube_subscribe.py
popup/: popup.css  popup.html  popup.js
(+43 files in other folders)
