# Path: max-desktop/src-tauri/Cargo.toml
# Use: Rust dependencies and packaging setup for Tauri.
[package]
name = "max-desktop"
version = "0.1.0"
description = "MAX Desktop Assistant"
authors = ["Sanket"]
edition = "2021"

[lib]
name = "max_desktop_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2"
